--- a/po/wesnoth-manual/ang@latin.po
+++ b/po/wesnoth-manual/ang@latin.po
@@ -7,15 +7,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ang@latin\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-02-18 14:42+0100\n"
-"PO-Revision-Date: 2012-02-22 20:40-0500\n"
+"POT-Creation-Date: 2012-03-31 10:44+0300\n"
+"PO-Revision-Date: 2012-03-31 23:11-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Old English <http://wiki.wesnoth.org/OldEnglishTranslation>\n"
 "Language: ang@latin\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n==2 ? 1 : 2\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
 #. type: Attribute 'lang' of: <book>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:6
@@ -409,7 +409,7 @@ msgstr ""
 #. type: Content of: <book><chapter><section><section><title>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:282
 msgid "Campaigns"
-msgstr ""
+msgstr "Fyrda"
 
 #. type: Content of: <book><chapter><section><section><simpara>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:283
@@ -982,7 +982,7 @@ msgstr "Ctrl+q"
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:665
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1203
 msgid "Quit game"
-msgstr ""
+msgstr "Gamen læfan"
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:670
@@ -1130,6 +1130,7 @@ msgstr ""
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:812
+#, fuzzy
 msgid "Shift+s"
 msgstr "Shift+s"
 
@@ -1239,6 +1240,7 @@ msgstr ""
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:916
+#, fuzzy
 msgid "Shift+n"
 msgstr "Shift+n"
 
@@ -1510,6 +1512,7 @@ msgstr ""
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1170
+#, fuzzy
 msgid "Shift+c"
 msgstr "Shift+c"
 
@@ -1906,7 +1909,7 @@ msgstr ""
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1483
 msgid "Day (afternoon)"
-msgstr "Dæg (middæg)"
+msgstr "Dæg (ofernon)"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1497
@@ -2067,7 +2070,7 @@ msgstr ""
 #. type: Content of: <book><chapter><section><section><variablelist><varlistentry><term>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1634
 msgid "Quick"
-msgstr ""
+msgstr "Sƿift"
 
 #. type: Content of: <book><chapter><section><section><variablelist><varlistentry><listitem><simpara>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1638
@@ -2392,7 +2395,7 @@ msgstr ""
 #. type: Content of: <book><chapter><section><section><variablelist><varlistentry><term>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1923
 msgid "Ambush"
-msgstr "Sætung"
+msgstr "Sæt"
 
 #. type: Content of: <book><chapter><section><section><variablelist><varlistentry><listitem><simpara>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1927
@@ -2433,7 +2436,7 @@ msgstr ""
 #. type: Content of: <book><chapter><section><section><variablelist><varlistentry><term>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1961
 msgid "Heals +4"
-msgstr "Hælaþ +4"
+msgstr "Hælþ +4"
 
 #. type: Content of: <book><chapter><section><section><variablelist><varlistentry><listitem><simpara>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1965
@@ -2448,7 +2451,7 @@ msgstr ""
 #. type: Content of: <book><chapter><section><section><variablelist><varlistentry><term>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1976
 msgid "Heals +8"
-msgstr "Hælaþ +8"
+msgstr "Hælþ +8"
 
 #. type: Content of: <book><chapter><section><section><variablelist><varlistentry><listitem><simpara>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1980
@@ -2463,7 +2466,7 @@ msgstr ""
 #. type: Content of: <book><chapter><section><section><variablelist><varlistentry><term>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1991
 msgid "Illuminates"
-msgstr ""
+msgstr "Gebirhteþ"
 
 #. type: Content of: <book><chapter><section><section><variablelist><varlistentry><listitem><simpara>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1995
@@ -2477,7 +2480,7 @@ msgstr ""
 #. type: Content of: <book><chapter><section><section><variablelist><varlistentry><term>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:2004
 msgid "Leadership"
-msgstr ""
+msgstr "Ladscipe"
 
 #. type: Content of: <book><chapter><section><section><variablelist><varlistentry><listitem><simpara>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:2008
@@ -2492,7 +2495,7 @@ msgstr ""
 #. type: Content of: <book><chapter><section><section><variablelist><varlistentry><term>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:2019
 msgid "Nightstalk"
-msgstr ""
+msgstr "Nihtstealcung"
 
 #. type: Content of: <book><chapter><section><section><variablelist><varlistentry><listitem><simpara>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:2023
