--- a/po/wesnoth-lib/ang.po
+++ b/po/wesnoth-lib/ang.po
@@ -9,14 +9,14 @@ msgstr ""
 "Project-Id-Version: ang\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-03-31 10:45+0200\n"
-"PO-Revision-Date: 2011-12-01 07:52-0500\n"
+"PO-Revision-Date: 2012-04-05 21:56-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Old English <http://wiki.wesnoth.org/OldEnglishTranslation>\n"
 "Language: ang\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n==2 ? 1 : 2\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
 #. [terrain_type]: id=deep_water_gray
 #. [terrain_type]: id=deep_water
@@ -112,8 +112,9 @@ msgstr "ᚷᚱᛖᚾᛖ ᚷᚱᚫᛋ"
 
 #. [terrain_type]: id=savanna
 #: data/core/terrain.cfg:164
+#, fuzzy
 msgid "Semi-dry Grass"
-msgstr ""
+msgstr "ᛋᚪᛗᛞᚱᚣᚷᛖ ᚷᚱᚫᛋ"
 
 #. [terrain_type]: id=grass_dry
 #: data/core/terrain.cfg:175
@@ -135,8 +136,9 @@ msgstr "ᛇᚱᚦᛖ"
 
 #. [terrain_type]: id=dirt_dark
 #: data/core/terrain.cfg:197
+#, fuzzy
 msgid "Dark Dirt"
-msgstr "ᛞᛁᛗᛗᚢ ᛇᚱᚦᛖ"
+msgstr "ᛞᚢᚾᚾ ᛇᚱᚦᛖ"
 
 #. [terrain_type]: id=dirt
 #: data/core/terrain.cfg:207
@@ -146,7 +148,7 @@ msgstr ""
 #. [terrain_type]: id=road
 #: data/core/terrain.cfg:217
 msgid "Dry Dirt"
-msgstr "ᛞᚱᚣᚷᛖᚢ ᛇᚱᚦᛖ"
+msgstr "ᛞᚱᚣᚷᚢ ᛇᚱᚦᛖ"
 
 #. [terrain_type]: id=road
 #. [terrain_type]: id=road_clean
@@ -272,12 +274,12 @@ msgstr ""
 #. [terrain_type]: id=water-lilies
 #: data/core/terrain.cfg:427
 msgid "Water Lilies"
-msgstr ""
+msgstr "ᚠᛚᛠᚦᚪᚾ"
 
 #. [terrain_type]: id=water-lilies-flower
 #: data/core/terrain.cfg:437
 msgid "Flowering Water Lilies"
-msgstr ""
+msgstr "ᛒᛚᚩᚹᛖᚾᛞᚪ ᚠᛚᛠᚦᚪᚾ"
 
 #. [terrain_type]: id=great_tree
 #. [terrain_type]: id=great_tree_dead
@@ -330,22 +332,22 @@ msgstr ""
 #. [terrain_type]: id=deciduous_forest_summer
 #: data/core/terrain.cfg:512
 msgid "Summer Deciduous Forest"
-msgstr ""
+msgstr "ᛋᚢᛗᚩᚱᛚᛁᚳ ᚻᚱᚢᚱᚩᛚ ᚹᛠᛚᛞ"
 
 #. [terrain_type]: id=deciduous_forest_fall
 #: data/core/terrain.cfg:524
 msgid "Fall Deciduous Forest"
-msgstr ""
+msgstr "ᚻᚫᚱᚠᛖᛋᛏᛚᛁᚳ ᚻᚱᚢᚱᚩᛚ ᚹᛠᛚᛞ"
 
 #. [terrain_type]: id=deciduous_forest_winter
 #: data/core/terrain.cfg:536
 msgid "Winter Deciduous Forest"
-msgstr ""
+msgstr "ᚹᛁᚾᛏᛖᚱᛚᛁᚳ ᚻᚱᚢᚱᚩᛚ ᚹᛠᛚᛞ"
 
 #. [terrain_type]: id=deciduous_forest_winter_snow
 #: data/core/terrain.cfg:548
 msgid "Snowy Deciduous Forest"
-msgstr ""
+msgstr "ᛋᚾᚪᚹᛁᚷ ᚻᚱᚢᚱᚩᛚ ᚹᛠᛚᛞ"
 
 #. [terrain_type]: id=mixed_forest_summer
 #: data/core/terrain.cfg:560
@@ -398,7 +400,7 @@ msgstr ""
 #. [terrain_type]: id=hills_dry
 #: data/core/terrain.cfg:621
 msgid "Dry Hills"
-msgstr "ᛞᚱᚣᚷᛖᛖ ᚻᚣᛚᛚᚪᛋ"
+msgstr "ᛞᚱᚣᚷᛖ ᚻᚣᛚᛚᚪᛋ"
 
 #. [terrain_type]: id=desert_hills
 #: data/core/terrain.cfg:630
@@ -425,7 +427,7 @@ msgstr "ᛒᛇᚱᚷᚪᛋ"
 #. [terrain_type]: id=desert_mountains
 #: data/core/terrain.cfg:664
 msgid "Dry Mountains"
-msgstr "ᛞᚱᚣᚷᛖᛖ ᛒᛇᚱᚷᚪᛋ"
+msgstr "ᛞᚱᚣᚷᛖ ᛒᛇᚱᚷᚪᛋ"
 
 #. [terrain_type]: id=snow_mountains
 #: data/core/terrain.cfg:674
@@ -495,7 +497,7 @@ msgstr ""
 #. [terrain_type]: id=lit
 #: data/core/terrain.cfg:815
 msgid "Lit"
-msgstr "ᚷᛖᛚᛇᚻᛏᛖᛞ"
+msgstr "ᚷᛖᛒᛇᚱᚻᛏᛖᛞ"
 
 #. [terrain_type]: id=lit
 #: data/core/terrain.cfg:816
@@ -511,7 +513,7 @@ msgstr "ᛋᚳᚱᚫᚠ"
 #. [terrain_type]: id=cave
 #: data/core/terrain.cfg:827
 msgid "Cave Floor"
-msgstr "ᛋᚳᚱᚫᚠ ᚠᛚᚩᚱ"
+msgstr "ᛋᚳᚱᚫᚠᛖᛋ ᚠᛚᚩᚱ"
 
 #. [terrain_type]: id=cave_earthy
 #: data/core/terrain.cfg:836
@@ -526,7 +528,7 @@ msgstr ""
 #. [terrain_type]: id=cave_path
 #: data/core/terrain.cfg:856
 msgid "Cave Path"
-msgstr "ᛋᚳᚱᚫᚠ ᛈᚫᚦ"
+msgstr "ᛋᚳᚱᚫᚠᛖᛋ ᛈᚫᚦ"
 
 #. [terrain_type]: id=fungus
 #. [terrain_type]: id=fungus_beam
@@ -613,7 +615,7 @@ msgstr ""
 #: data/core/terrain.cfg:1039 data/core/terrain.cfg:1050
 #: data/core/terrain.cfg:1061 data/core/terrain.cfg:1072
 msgid "Cave Wall"
-msgstr "ᛋᚳᚱᚫᚠ ᚹᛠᛚᛚ"
+msgstr "ᛋᚳᚱᚫᚠᛖᛋ ᚹᛠᛚᛚ"
 
 #. [terrain_type]: id=cavewall
 #: data/core/terrain.cfg:1040
@@ -723,22 +725,22 @@ msgstr ""
 #. [terrain_type]: id=orcish_village
 #: data/core/terrain.cfg:1172
 msgid "Orcish Village"
-msgstr ""
+msgstr "ᚩᚱᚳᛁᛋᚳ ᚦᚩᚱᛈ"
 
 #. [terrain_type]: id=orcish_snow_village
 #: data/core/terrain.cfg:1185
 msgid "Snowy Orcish Village"
-msgstr ""
+msgstr "ᛋᚾᚪᚹᛁᚷ ᚩᚱᚳᛁᛋᚳ ᚦᚩᚱᛈ"
 
 #. [terrain_type]: id=elven_snow_village
 #: data/core/terrain.cfg:1200
 msgid "Snowy Elven Village"
-msgstr ""
+msgstr "ᛋᚾᚪᚹᛁᚷ ᚫᛚᚠᛁᛋᚳ ᚦᚩᚱᛈ"
 
 #. [terrain_type]: id=elven_village
 #: data/core/terrain.cfg:1213
 msgid "Elven Village"
-msgstr ""
+msgstr "ᚫᛚᚠᛁᛋᚳ ᚦᚩᚱᛈ"
 
 #. [terrain_type]: id=human_village
 #: data/core/terrain.cfg:1228
@@ -757,20 +759,18 @@ msgstr ""
 
 #. [terrain_type]: id=city_village
 #: data/core/terrain.cfg:1267
-#, fuzzy
 msgid "Human City"
-msgstr "ᛗᛖᚾᚾᛁᛋᚳᚢ ᛒᚢᚱᚷ"
+msgstr "ᛗᛖᚾᚾᛁᛋᚳ ᛒᚢᚱᚷ"
 
 #. [terrain_type]: id=windmill_village
 #: data/core/terrain.cfg:1280
 msgid "Windmill Village"
-msgstr "ᚹᛁᚾᛞᛗᚣᛚᛖᚾ ᚦᚩᚱᛈ"
+msgstr "ᚹᛁᚾᛞᛗᚣᛚᛖᚾᚪ ᚦᚩᚱᛈ"
 
 #. [terrain_type]: id=city_village_wno
 #: data/core/terrain.cfg:1293
-#, fuzzy
 msgid "Snowy Human City"
-msgstr "ᛋᚾᚪᚹᛁᚷᚢ ᛗᛖᚾᚾᛁᛋᚳᚢ ᛒᚢᚱᚷ"
+msgstr "ᛋᚾᚪᚹᛁᚷ ᛗᛖᚾᚾᛁᛋᚳ ᛒᚢᚱᚷ"
 
 #. [terrain_type]: id=city_village
 #: data/core/terrain.cfg:1306
@@ -805,12 +805,12 @@ msgstr ""
 #. [terrain_type]: id=underground_village
 #: data/core/terrain.cfg:1386
 msgid "Cave Village"
-msgstr ""
+msgstr "ᛋᚳᚱᚫᚠᛖᛋ ᚦᚩᚱᛈ"
 
 #. [terrain_type]: id=dwarven_village
 #: data/core/terrain.cfg:1399
 msgid "Dwarven Village"
-msgstr ""
+msgstr "ᛞᚹᛇᚱᚷᛁᛋᚳ ᚦᚩᚱᛈ"
 
 #. [terrain_type]: id=hut_village
 #: data/core/terrain.cfg:1412
@@ -844,10 +844,8 @@ msgstr ""
 
 #. [terrain_type]: id=mermen-village
 #: data/core/terrain.cfg:1492
-#, fuzzy
-#| msgid "Village"
 msgid "Merfolk Village"
-msgstr "ᚦᚩᚱᛈ"
+msgstr "ᛗᛖᚱᛖᛗᛖᚾᚾᛁᛋᚳ ᚦᚩᚱᛈ"
 
 #. [terrain_type]: id=village_overlay
 #: data/core/terrain.cfg:1507
@@ -879,37 +877,37 @@ msgstr ""
 #: data/core/terrain.cfg:1592 data/core/terrain.cfg:1604
 #: data/core/terrain.cfg:1654 data/core/terrain.cfg:1864
 msgid "Castle"
-msgstr ""
+msgstr "ᛒᚢᚱᚻ"
 
 #. [terrain_type]: id=orcish_fort
 #: data/core/terrain.cfg:1547
 msgid "Orcish Castle"
-msgstr ""
+msgstr "ᚩᚱᚳᛁᛋᚳ ᛒᚢᚱᚻ"
 
 #. [terrain_type]: id=snow_orcish_fort
 #: data/core/terrain.cfg:1559
 msgid "Snowy Orcish Castle"
-msgstr ""
+msgstr "ᛋᚾᚪᚹᛁᚷ ᚩᚱᚳᛁᛋᚳ ᛒᚢᚱᚻ"
 
 #. [terrain_type]: id=castle
 #: data/core/terrain.cfg:1571
 msgid "Human Castle"
-msgstr ""
+msgstr "ᛗᛖᚾᚾᛁᛋᚳ ᛒᚢᚱᚻ"
 
 #. [terrain_type]: id=snow_castle
 #: data/core/terrain.cfg:1582
 msgid "Snowy Human Castle"
-msgstr ""
+msgstr "ᛋᚾᚪᚹᛁᚷ ᛗᛖᚾᚾᛁᛋᚳ ᛒᚢᚱᚻ"
 
 #. [terrain_type]: id=elven_castle
 #: data/core/terrain.cfg:1593
 msgid "Elvish Castle"
-msgstr ""
+msgstr "ᚫᛚᚠᛁᛋᚳ ᛒᚢᚱᚻ"
 
 #. [terrain_type]: id=dwarven_castle
 #: data/core/terrain.cfg:1605
 msgid "Dwarven Castle"
-msgstr ""
+msgstr "ᛞᚹᛇᚱᚷᛁᛋᚳ ᛒᚢᚱᚻ"
 
 #. [terrain_type]: id=ruin
 #. [terrain_type]: id=sunkenruin
@@ -1084,10 +1082,8 @@ msgstr ""
 #. [terrain_type]: id=rotbridgediag2
 #: data/core/terrain.cfg:1931 data/core/terrain.cfg:1943
 #: data/core/terrain.cfg:1955
-#, fuzzy
-#| msgid "Bridge"
 msgid "Rotting Bridge"
-msgstr "ᛒᚱᚣᚳᚷ"
+msgstr "ᚱᚩᛏᛁᛖᚾᛞᚢ ᛒᚱᚣᚳᚷ"
 
 #. [terrain_type]: id=stone_bridge
 #: data/core/terrain.cfg:1969 data/core/terrain.cfg:1981
@@ -1245,7 +1241,7 @@ msgstr ""
 #. [label]
 #: data/gui/default/window/addon_description.cfg:149
 msgid "Size:"
-msgstr "ᚷᚱᚣᛏᚢ:"
+msgstr "ᚷᚱᛁᛖᛏᚢ:"
 
 #. [label]
 #: data/gui/default/window/addon_description.cfg:180
@@ -1264,9 +1260,8 @@ msgstr "ᚷᛖᚦᛇᛞᚾᛖᛋᛋᚪ:"
 
 #. [scroll_label]: id=translations
 #: data/gui/default/window/addon_description.cfg:226
-#, fuzzy
 msgid "translations^None"
-msgstr "ᚾᚪᚾ"
+msgstr "ᚾᚪᚾᚪ"
 
 #. [label]
 #: data/gui/default/window/addon_uninstall_list.cfg:51
@@ -1323,7 +1318,7 @@ msgstr "ᚷᛠᛏᚪᚾ"
 #. [label]: id=title
 #: data/gui/default/window/campaign_difficulty.cfg:57
 msgid "Difficulty"
-msgstr ""
+msgstr "ᛠᚱᚠᚩᚦᚾᛖᛋ"
 
 #. [scroll_label]: id=message
 #: data/gui/default/window/campaign_difficulty.cfg:77
@@ -1392,13 +1387,14 @@ msgstr "ᚾᚪᛗᚪ"
 #: data/gui/default/window/data_manage.cfg:177
 #: data/gui/default/window/game_load.cfg:277
 msgid "Date"
-msgstr ""
+msgstr "ᛏᚫᛚᛗᛠᚱᚳ"
 
 #. [button]: id=clear
 #: data/gui/default/window/data_manage.cfg:266
 #: data/gui/default/window/data_manage.cfg:267
+#, fuzzy
 msgid "Clear"
-msgstr "ᛒᛖᚱᛁᚪᚾ"
+msgstr "ᚱᚣᛗᚪᚾ"
 
 #. [button]: id=restore
 #: data/gui/default/window/data_manage.cfg:283
@@ -1459,7 +1455,7 @@ msgstr ""
 #. [label]
 #: data/gui/default/window/editor_new_map.cfg:54 src/mapgen_dialog.cpp:121
 msgid "Width:"
-msgstr "ᚹᛁᛞᚢ:"
+msgstr "ᚹᛁᛞᚾᛖᛋᛋ:"
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
 #. [label]
@@ -1470,10 +1466,8 @@ msgstr "ᚻᛁᛖᚻᚦᚢ:"
 #. [button]: id=ok
 #: data/gui/default/window/editor_new_map.cfg:108
 #: data/gui/default/window/editor_new_map.cfg:109
-#, fuzzy
-#| msgid "Create Game"
 msgid "Create New Map"
-msgstr "ᚷᚪᛗᛖᚾ ᛗᚪᚳᛁᚪᚾ"
+msgstr "ᚾᛁᚹᛖ ᛚᚪᚾᛞᚳᚪᚱᛏᚪᚾ ᛋᚳᛁᛖᛈᛈᚪᚾ"
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
 #. [label]
@@ -1487,22 +1481,22 @@ msgstr ""
 #. [label]
 #: data/gui/default/window/editor_resize_map.cfg:54
 msgid "New width:"
-msgstr "ᚾᛁᚹᛖᚢ ᚹᛁᛞᚢ:"
+msgstr "ᚾᛁᚹᚢ ᚹᛁᛞᚾᛖᛋᛋ:"
 
 #. [label]
 #: data/gui/default/window/editor_resize_map.cfg:78
 msgid "Old width:"
-msgstr "ᛠᛚᛞᚢ ᚹᛁᛞᚢ:"
+msgstr "ᛠᛚᛞ ᚹᛁᛞᚾᛖᛋᛋ:"
 
 #. [label]
 #: data/gui/default/window/editor_resize_map.cfg:102
 msgid "New height:"
-msgstr "ᚾᛁᚹᛖᚢ ᚻᛁᛖᚻᚦᚢ:"
+msgstr "ᚾᛁᚹᚢ ᚻᛁᛖᚻᚦᚢ:"
 
 #. [label]
 #: data/gui/default/window/editor_resize_map.cfg:126
 msgid "Old height:"
-msgstr "ᛠᛚᛞᚢ ᚻᛁᛖᚻᚦᚢ:"
+msgstr "ᛠᛚᛞ ᚻᛁᛖᚻᚦᚢ:"
 
 #. [label]
 #: data/gui/default/window/editor_resize_map.cfg:153
@@ -1558,7 +1552,7 @@ msgstr "ᚷᚱᛖᚾᛖ:"
 #. [label]
 #: data/gui/default/window/editor_settings.cfg:187
 msgid "Blue:"
-msgstr "ᛒᛚᚪᚹ:"
+msgstr "ᚻᚫᚹᛖᚾ:"
 
 #. [toggle_button]: id=use_mdi
 #: data/gui/default/window/editor_settings.cfg:231
@@ -1721,7 +1715,7 @@ msgstr ""
 #. [label]: id=lblMessage
 #: data/gui/default/window/game_save_message.cfg:60
 msgid "x"
-msgstr "ᛉ"
+msgstr "x"
 
 #. [label]: id=lblMessage
 #: data/gui/default/window/game_save_oos.cfg:62
@@ -1797,10 +1791,8 @@ msgstr ""
 #. [button]: id=ok
 #: data/gui/default/window/language_selection.cfg:128
 #: data/gui/default/window/language_selection.cfg:129 src/hotkeys.cpp:211
-#, fuzzy
-#| msgid "Language"
 msgid "Change Language"
-msgstr "ᛋᛈᚱᚫᚳ"
+msgstr "ᛋᛈᚱᚫᚳᛖ ᚹᛖᚾᛞᚪᚾ"
 
 #. [row]
 #: data/gui/default/window/lobby_main.cfg:109
@@ -1832,7 +1824,7 @@ msgstr ""
 #. [row]
 #: data/gui/default/window/lobby_main.cfg:180
 msgid "Unknown era"
-msgstr ""
+msgstr "ᚢᚾᚳᚢᚦ ᛁᛖᛚᛞᚢ"
 
 #. [row]
 #: data/gui/default/window/lobby_main.cfg:182
@@ -1903,7 +1895,7 @@ msgstr ""
 #. [label]: id=room
 #: data/gui/default/window/lobby_main.cfg:479
 msgid "Rooms"
-msgstr "ᚱᚢᛗᚪᛋ"
+msgstr "ᚷᛖᚱᚢᛗᚪᚾ"
 
 #. [image]: id=pending_messages
 #: data/gui/default/window/lobby_main.cfg:497
@@ -2037,7 +2029,7 @@ msgstr ""
 #. [label]: id=nick_title
 #: data/gui/default/window/mp_change_control.cfg:73
 msgid "Nickname"
-msgstr "ᛠᚳᚪᚾᚪᛗᚪ"
+msgstr "ᛒᚱᚢᚳᛖᚾᛞᚾᚪᛗᚪ"
 
 #. [label]
 #: data/gui/default/window/mp_change_control.cfg:194
@@ -2125,7 +2117,7 @@ msgstr ""
 #. [label]: id=map_size
 #: data/gui/default/window/mp_create_game.cfg:167
 msgid "Map size: "
-msgstr ""
+msgstr "ᛚᚪᚾᛞᚳᚪᚱᛏᚪᚾ ᚷᚱᛁᛖᛏᚢ: "
 
 #. [label]
 #: data/gui/default/window/mp_create_game.cfg:185
@@ -2162,7 +2154,7 @@ msgstr ""
 #. [label]
 #: data/gui/default/window/mp_create_game.cfg:380
 msgid "Village gold"
-msgstr ""
+msgstr "ᚦᚩᚱᛈᛖᛋ ᚷᚩᛚᛞ"
 
 #. [toggle_button]: id=fog
 #: data/gui/default/window/mp_create_game.cfg:460
@@ -2365,7 +2357,7 @@ msgstr ""
 #. [grid]
 #: data/gui/default/window/title_screen.cfg:229
 msgid "Change the language"
-msgstr ""
+msgstr "ᚦᚪ ᛋᛈᚱᚫᚳᛖ ᚹᛖᚾᛞᚪᚾ"
 
 #. [grid]
 #: data/gui/default/window/title_screen.cfg:230
@@ -2385,7 +2377,7 @@ msgstr ""
 #. [grid]
 #: data/gui/default/window/title_screen.cfg:232
 msgid "Quit the game"
-msgstr ""
+msgstr "ᚦᚫᛏ ᚷᚪᛗᛖᚾ ᛚᚫᚠᚪᚾ"
 
 #. [button]: id=ok
 #: data/gui/default/window/unit_attack.cfg:195
@@ -2406,7 +2398,7 @@ msgstr ""
 #. [label]
 #: data/gui/default/window/unit_create.cfg:67
 msgid "Gender:"
-msgstr ""
+msgstr "ᚷᛖᚳᚣᚾᛞ:"
 
 #. [toggle_button]: id=male_toggle
 #: data/gui/default/window/unit_create.cfg:77
@@ -2421,7 +2413,7 @@ msgstr "ᚹᛁᚠᛚᛁᚳ"
 #. [label]: id=race
 #: data/gui/default/window/unit_create.cfg:119
 msgid "Race"
-msgstr ""
+msgstr "ᚳᚣᚾᚾ"
 
 #: src/filechooser.cpp:77
 msgid "File: "
@@ -2624,7 +2616,7 @@ msgstr "ᚻᛚᚢᛞᚾᛖᛋ:"
 #, fuzzy
 #| msgid "Speed: "
 msgid "Scroll speed:"
-msgstr "ᚩᚠᚩᛋᛏ: "
+msgstr "ᚷᛖᚹᛁᚾᛞᚢᛝᛖ ᚩᚠᚩᛋᛏ:"
 
 #: src/game_preferences_display.cpp:227
 msgid "Sample rate (Hz):"
@@ -2893,8 +2885,9 @@ msgid "Prefs section^Display"
 msgstr ""
 
 #: src/game_preferences_display.cpp:1256
+#, fuzzy
 msgid "Prefs section^Sound"
-msgstr "ᚻᛚᛖᛗ"
+msgstr "ᛋᚹᛖᚷ"
 
 #: src/game_preferences_display.cpp:1257
 msgid "Prefs section^Multiplayer"
@@ -3051,14 +3044,13 @@ msgstr ""
 
 #: src/gui/dialogs/game_load.cpp:320
 msgid "Difficulty: "
-msgstr ""
+msgstr "ᛠᚱᚠᚩᚦᚾᛖᛋ: "
 
 #: src/gui/dialogs/game_load.cpp:324
 msgid "Version: "
 msgstr ""
 
 #: src/gui/dialogs/lobby_main.cpp:230
-#, fuzzy
 msgid "whisper to $receiver"
 msgstr "ᚻᚹᛁᛋᛈᚱᛁᚪᚾ ᛏᚩ $receiver"
 
@@ -3089,8 +3081,9 @@ msgid "$player has entered the room"
 msgstr ""
 
 #: src/gui/dialogs/lobby_main.cpp:1458
+#, fuzzy
 msgid "$player has left the room"
-msgstr ""
+msgstr "$player ᚻᚫᚠᚦ ᚷᛖᛚᚫᚠᛖᛞ ᚦᚩᚾᛖ ᚷᛖᚱᚢᛗᚪᚾ"
 
 #: src/gui/dialogs/lobby_main.cpp:1571
 msgid "Password Required"
@@ -3591,9 +3584,8 @@ msgid "Speak to Ally"
 msgstr ""
 
 #: src/hotkeys.cpp:208
-#, fuzzy
 msgid "Speak to All"
-msgstr "ᛋᛈᚱᛖᚳᚪᚾ ᛏᚩ ᛠᛚᛚᚢᛗ"
+msgstr "ᛋᛈᚱᛖᚳᚪᚾ ᛠᛚᛚᚢᛗ"
 
 #: src/hotkeys.cpp:210
 msgid "View Chat Log"
@@ -3633,7 +3625,7 @@ msgstr ""
 
 #: src/hotkeys.cpp:248
 msgid "Start Campaign"
-msgstr "ᚠᚣᚱᛞ ᛋᛏᚣᚱᛏᚪᚾ"
+msgstr "ᚠᚣᚱᛞᛖ ᛒᛖᚷᛁᚾᚾᚪᚾ"
 
 #: src/hotkeys.cpp:255
 msgid "Start Multiplayer Game"
@@ -3715,7 +3707,7 @@ msgstr ""
 
 #: src/mapgen_dialog.cpp:306
 msgid "/1000 tiles"
-msgstr "/1000 ᛏᛁᚷᛖᛚᚪᚾ"
+msgstr "/1000 ᛏᛁᚷᛖᛚᛖᚾᚪ"
 
 #: src/mapgen_dialog.cpp:315
 msgid "Coastal"
