--- a/po/wesnoth-help/de.po
+++ b/po/wesnoth-help/de.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.10\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-03-24 18:11+0100\n"
-"PO-Revision-Date: 2012-03-12 08:28+0100\n"
-"Last-Translator: Marcel Miebach <marcel_miebach@gmx.de>\n"
+"PO-Revision-Date: 2012-04-06 10:05+0100\n"
+"Last-Translator: Nils Kneuper <crazy-ivanovic  AT gmx  D O  T net>\n"
 "Language-Team: irc://irc.freenode.net/#wesnoth-de\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -3679,6 +3679,11 @@ msgid ""
 "'m' first to open the chat line).\n"
 "\n"
 msgstr ""
+"Um diese Befehle einzugeben müsst Ihr entweder durch drücken der Taste ':' "
+"die Kommandozeile öffnen und dann den Befehl (nun ohne ':') eingeben (dies "
+"wird hier gezeigt), oder Ihr öffnet eine Gesprächszeile (standardmäßig durch "
+"drücken von 'm') und gebt die Befehle dort mit dem Präfix '/' ein.\n"
+"\n"
 
 #. [topic]: id=mp_commands
 #: data/core/help.cfg:835
