--- a/po/wesnoth-lib/de.po
+++ b/po/wesnoth-lib/de.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.10\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-22 15:00+0100\n"
-"PO-Revision-Date: 2012-01-20 12:46+0100\n"
+"PO-Revision-Date: 2012-04-06 09:55+0100\n"
 "Last-Translator: Nils Kneuper <crazy-ivanovic  AT gmx  D O  T net>\n"
 "Language-Team: irc://irc.freenode.net/#wesnoth-de\n"
 "Language: \n"
@@ -3384,9 +3384,9 @@ msgstr "Animationen überspringen"
 
 #: src/hotkeys.cpp:113
 #, fuzzy
-#| msgid "Toggle Planning Mode"
+#| msgid "whiteboard^Planning Mode"
 msgid "Toggle Planning Mode"
-msgstr "Planungsmodus umschalten"
+msgstr "Planungsmodus"
 
 #: src/hotkeys.cpp:114
 msgid "Execute Planned Action"
@@ -3404,19 +3404,19 @@ msgstr "Geplante Aktionen löschen"
 
 #: src/hotkeys.cpp:117
 #, fuzzy
-#| msgid "Move Action Up Queue"
+#| msgid "whiteboard^Move Action Up"
 msgid "Move Action Up Queue"
 msgstr "Handlung vorziehen"
 
 #: src/hotkeys.cpp:118
 #, fuzzy
-#| msgid "Move Action Down Queue"
+#| msgid "whiteboard^Move Action Down"
 msgid "Move Action Down Queue"
 msgstr "Handlung zurückstellen"
 
 #: src/hotkeys.cpp:119
 #, fuzzy
-#| msgid "Suppose Dead"
+#| msgid "whiteboard^Suppose Dead"
 msgid "Suppose Dead"
 msgstr "Als Tod annehmen"
 
@@ -3871,12 +3871,13 @@ msgstr ""
 "Der Schlüssel »$deprecated_key« wurde in »$key« umbenannt. Unterstützung für "
 "»$deprecated_key« wird in Version $removal_version entfernt."
 
-#, fuzzy
 #~| msgid "Execute All Actions"
 #~ msgid "whiteboard^Execute Action"
-#~ msgstr "Alle Aktionen umsetzen"
+#~ msgstr "Aktion umsetzen"
 
-#, fuzzy
 #~| msgid "Execute All Actions"
 #~ msgid "whiteboard^Execute All Actions"
 #~ msgstr "Alle Aktionen umsetzen"
+
+#~ msgid "whiteboard^Delete Action"
+#~ msgstr "Aktion löschen"
