updated Italian and Polish translation

--- a/po/wesnoth-lib/it.po
+++ b/po/wesnoth-lib/it.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-22 15:00+0100\n"
-"PO-Revision-Date: 2012-04-02 19:51+0100\n"
+"PO-Revision-Date: 2012-04-06 19:24+0100\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italian <kde-i18n-it@kde.org>\n"
 "Language: it\n"
@@ -3381,8 +3381,6 @@ msgid "Skip Animation"
 msgstr "Salta le animazioni"
 
 #: src/hotkeys.cpp:113
-#, fuzzy
-#| msgid "whiteboard^Planning Mode"
 msgid "Toggle Planning Mode"
 msgstr "Commuta la modalità progettazione"
 
@@ -3391,30 +3389,22 @@ msgid "Execute Planned Action"
 msgstr "Esegui azione pianificata"
 
 #: src/hotkeys.cpp:115
-#, fuzzy
-#| msgid "Execute Planned Action"
 msgid "Execute All Actions"
-msgstr "Esegui azione pianificata"
+msgstr "Esegui tutte le azioni"
 
 #: src/hotkeys.cpp:116
 msgid "Delete Planned Action"
 msgstr "Elimina azione pianificata"
 
 #: src/hotkeys.cpp:117
-#, fuzzy
-#| msgid "whiteboard^Move Action Up"
 msgid "Move Action Up Queue"
 msgstr "Sposta l’azione prima nella coda"
 
 #: src/hotkeys.cpp:118
-#, fuzzy
-#| msgid "whiteboard^Move Action Down"
 msgid "Move Action Down Queue"
 msgstr "Sposta l’azione dopo nella coda"
 
 #: src/hotkeys.cpp:119
-#, fuzzy
-#| msgid "whiteboard^Suppose Dead"
 msgid "Suppose Dead"
 msgstr "Morte presunta"
 
