--- a/po/wesnoth-tutorial/it.po
+++ b/po/wesnoth-tutorial/it.po
@@ -7,14 +7,14 @@ msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-21 01:34+0100\n"
-"PO-Revision-Date: 2012-02-20 11:02+0100\n"
+"PO-Revision-Date: 2012-03-11 12:14+0100\n"
 "Last-Translator: Antonio Rosella <arosella@yahoo.com>\n"
-"Language-Team: Italiano <wesnoth-l10n-it@cirulla.net>\n"
+"Language-Team: Italian <>\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8-bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\n"
 "X-Generator: KBabel 1.11.4\n"
 
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:40
@@ -1601,15 +1601,14 @@ msgstr ""
 
 #. [else]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1138
-#, fuzzy
 msgid ""
 "No other units can reach that orc. I hope my $unit.language_name survives "
 "its counter-attack! I’d better grab more villages and move everyone closer "
 "for next turn."
 msgstr ""
-"Nessun’altra unità può raggiungere quell’orco: spero che la mia "
-"unitàsopravviva al contrattacco! Sarà meglio che mi impadronisca di più "
-"villaggi e al prossimo turno muova tutti quanti più vicino."
+"Nessun’altra unità può raggiungere quell’orco: spero che la mia unità "
+"sopravviva al contrattacco! Sarà meglio che mi impadronisca di più villaggi "
+"e al prossimo turno muova tutti quanti più vicino."
 
 #. [else]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1139
