--- a/po/wesnoth/it.po
+++ b/po/wesnoth/it.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-22 15:00+0100\n"
-"PO-Revision-Date: 2012-04-02 19:46+0100\n"
+"PO-Revision-Date: 2012-04-06 19:22+0100\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italian <kde-i18n-it@kde.org>\n"
 "Language: it\n"
@@ -5198,15 +5198,11 @@ msgid "prompt^Command:"
 msgstr "Comando:"
 
 #: src/mouse_events.cpp:703
-#, fuzzy
-#| msgid ""
-#| "You cannot move your leader away from the keep with some planned recruits "
-#| "or recalls left."
 msgid ""
 "You cannot move your leader away from the keep with some planned recruits "
 "left."
 msgstr ""
-"Non puoi spostare il condottiero dalla fortezza se hai reclutamenti o "
+"Non puoi spostare il tuo condottiero dalla fortezza se hai reclutamenti o "
 "richiami pianificati da fare."
 
 #: src/mouse_events.cpp:834 src/mouse_events.cpp:914
